# sortAnalyser

./: CMakeLists.txt  consts.h  main.cpp
Analyser/: stats.cpp  stats.h
UserInterface/: gui.cpp  gui.h
UserInterface/Buttons/: buttons.cpp  buttons.h
UserInterface/UIExceptions/: uiExceptions.cpp  uiExceptions.h
